Updated: template and settings

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
     <title>Django with Vercel</title>
 </head>
 <body>
-    <h1>Hello World from Django-Vercel</h1>
+    <h1>Hello World from Django-Vercel.<br/>Its Fast!</h1>
 </body>
 </html>
