Updated & Added: new templates to project

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
     {% block content %} 
 
-<h1>Hello World from Django-Vercel.<br/>Its Fast!</h1>
+<h1>About us </h1>
 
     {% endblock %}
